@@ -1,43 +1,50 @@
 % File src/library/base/man/funprog.Rd
 % Part of the R package, http://www.R-project.org
-% Copyright 1995-2007 R Core Development Team
+% Copyright 1995-2008 R Core Development Team
 % Distributed under GPL 2 or later
-
 \name{funprog}
-\alias{Reduce}
 \alias{Filter}
+\alias{Find}
 \alias{Map}
 \alias{Negate}
+\alias{Reduce}
+\alias{Position}
 \title{Common Higher-Order Functions in Functional Programming
   Languages}
 \description{
   \code{Reduce} uses a binary function to successively combine the
   elements of a given vector and a possibly given initial value.
   \code{Filter} extracts the elements of a vector for which a predicate
-  (logical) function gives true.  \code{Map} applies a function to the
-  corresponding elements of given vectors.  \code{Negate} creates the
-  negation of a given function.
+  (logical) function gives true.  \code{Find} and \code{Position} give
+  the first or last such element and its position in the vector,
+  respectively.  code{Map} applies a function to the corresponding
+  elements of given vectors.  \code{Negate} creates the negation of a
+  given function.
 }
 \usage{
 Reduce(f, x, init, right = FALSE, accumulate = FALSE)
 Filter(f, x)
+Find(f, x, right = FALSE, nomatch = NULL)
 Map(f, ...)
 Negate(f)
+Position(f, x, right = FALSE, nomatch = NA_integer_)
 }
 \arguments{
   \item{f}{a function of the appropriate arity (binary for
-    \code{Reduce}, unary for \code{Filter}, \eqn{k}-ary for \code{Map}
-    if this is called with \eqn{k} arguments.  An arbitrary predicate
-    function for \code{Negate}.}
+    \code{Reduce}, unary for \code{Filter}, \code{Find} and
+    \code{Position}, \eqn{k}-ary for \code{Map} if this is called with
+    \eqn{k} arguments).  An arbitrary predicate function for
+    \code{Negate}.}
   \item{x}{a vector.}
   \item{init}{an \R object of the same kind as the elements of
     \code{x}.}
-  \item{right}{a logical indicating whether reduction should proceed
-    from left to right (left-associative, default) or from right to
-    left.}
-  \item{accumulate}{a logical indicating whether the successive
+  \item{right}{a logical indicating whether to proceed from left to
+    right (default) or from right to left.}
+  \item{accumulate}{a logical indicating whether the successive reduce
     combinations should be accumulated.  By default, only the final
     combination is used.}
+  \item{nomatch}{the value to be returned in the case when
+    \dQuote{no match} (no element satisfying the predicate) is found.}
   \item{\dots}{vectors.}
 }
 \details{
@@ -71,6 +78,14 @@ Negate(f)
   \code{NA} handling may be added in the future.  \code{Filter}
   corresponds to \code{filter} in Haskell or \code{remove-if-not} in
   Common Lisp.
+
+  \code{Find} and \code{Position} are patterned after Common Lisp's
+  \code{find-if} and \code{position-if}, respectively.  If there is an
+  element for which the predicate function gives true, then the first or
+  last such element or its position is returned depending on whether
+  \code{right} is false (default) or true, respectively.  If there is no
+  such element, the value specified by \code{nomatch} is returned.  The
+  current implementation is not optimized for performance.
 
   \code{Map} is a simple wrapper to \code{\link{mapply}} which does not
   attempt to simplify the result, similar to Common Lisp's \code{mapcar}
