@@ -1,0 +1,13 @@
+\name{identity}
+\alias{identity}
+\title{Identity function}
+\description{
+  A trivial identity function returning its argument.
+}
+\usage{
+identity(x)
+}
+\arguments{
+  \item{x}{an \R object.}
+}
+\keyword{programming}
